Fix image paths and dark mode table

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,7 +22,11 @@
   }
 
 body.mode-sombre table {
-    background-color: #000000;
+    background-color: #1f1f1f !important;
+  }
+
+body.mode-sombre thead th {
+    background-color: #2c2c2c !important;
   }
 
   body.mode-sombre th,
